<resources>
    <string name="app_name">Logi</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Logi</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Login</string>
    <string name="sub_logo_first">Get the content ready</string>
    <string name="sub_logo_second">we will do the rest</string>
    <string name="btn_link_to_register">Not register? Sign up</string>
    <string name="btn_link_to_login">Already registered? Log me in!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="logo_login">logo login image</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="home">Home</string>
    <string name="user_name_template">User Name</string>
    <string name="email_template">user@example.com</string>
    <string name="title_activity_Settings">SettingsActivity</string>
    <string name="ProfileActivity">ProfileActivity</string>
    <string name="ProfileHeaderImage">ProfileHeaderImage</string>
    <string name="deliveries_waiting_for_date">delivey_waiting</string>
    <string name="next_delivery_arrive_at">next_delivery_arrive</string>
    <string name="your_deliveries">your_deliveries</string>
    <string name="your_favorite_hour">favorite_hour</string>
    <string name="hour">hour</string>
    <string name="your_favorite_date">favorite_date</string>
    <string name="date">date</string>
    <string name="CustomerActivity">Customer</string>
    <string name="CourierActivity">Courier</string>
    <string name="recycler_content">content</string>
    <string name="recycler_label">label:</string>
    <string name="pending_approval">Pending Approval</string>
    <string name="in_process">In Process</string>
    <string name="delivered">Delivered</string>
    <string name="recycler_delivery_id">Delivery ID</string>
    <string name="recycler_courier_name">Courier Name</string>
    <string name="recycler_customer_name">Customer Name</string>
    <string name="recycler_status">Status</string>
    <string name="delivery_info_button">delivery info button</string>
    <string name="no_panding">No Panding</string>
    <string name="product_name">product name</string>
    <string name="product_id">product id</string>
    <string name="product_description">product description</string>
    <string name="no_courier_associate">No Courier Associate</string>
    <string name="courier_icon">courier icon</string>
    <string name="delivery">Delivery</string>
    <string name="products">Products</string>
    <string name="courier">Couriers</string>
    <string name="name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="manager_radio_btn">Manager</string>
    <string name="customer_radio_btn">Customer</string>
    <string name="no_products">No Products</string>
    <string name="add_product">Add Product</string>
    <string name="no_item_to_show">No item to show</string>
    <string name="new_delivery">New Delivery</string>
    <string name="new_courier">New Courier</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="new_product">New Product</string>
    <string name="courier_name">Courier Name</string>
    <string name="call_courier">call courier</string>
    <string name="courier_phone">Courier Phone</string>
    <string name="courier_email">Courier Email</string>
    <string name="edit_profile_image">Edit profile image</string>
    <string name="products_search_bar">Products Search bar</string>
    <string name="productId">Product id</string>
    <string name="productName">Product name</string>
    <string name="productDesc">Product description</string>
    <string name="createNewProduct">New Product</string>
    <string name="createNewCourier">Submit</string>
    <string name="name_of_courier">Courier Name</string>
    <string name="email_of_courier">Courier Email</string>
    <string name="phone_of_courier">Courier Phone</string>
    <string name="password_of_courier">Courier Password</string>
    <string name="courier_radio_btn">Courier</string>
    <string name="city">city</string>
    <string name="delivery_address">delivery address</string>
    <string name="costumerName">Costumer Name</string>

    <!-- FCM Related Strings -->
    <string name="default_notification_channel_id" translatable="false">com.ariel.logi.logi.default_notification_channel_id</string>
    <string name="data_type">data_type</string>
    <string name="direct_message">direct_message</string>
    <string name="data_message">message</string>
    <string name="data_title">title</string>
    <string name="data_message_id">message_id</string>
    <string name="customerName">Customer Name</string>
    <string name="customerPhone">Customer Phone</string>
    <string name="customerAddress">Customer Address</string>
    <string name="customerCity">Customer City</string>
    <string name="deliveryId">Delivery Id</string>
    <string name="createNewDelivery">New Delivery</string>
    <string name="customerEmail">Customer Email</string>
    <string name="cust_del_product_name">cust_del_product_name</string>
    <string name="delivery_changeD_button">delivery_changeD_button</string>
    <string name="apply">Apply</string>
    <string name="deliveries_pending_for_date">Pending Deliveries:</string>
</resources>
