<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:id="@+id/recycler_parent_card_view"
    card_view:cardCornerRadius="5dp"
    android:layout_gravity="top"
    card_view:contentPadding="15dp"
    android:layout_margin="3dp"
    card_view:cardElevation="5dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/recycler_child_linear_layout"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recycler_courier_name"
                android:id="@+id/recycler_delivery_courier_name"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recycler_customer_name"
                android:id="@+id/recycler_customer_name"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recycler_delivery_id"
                android:id="@+id/recycler_delivery_id"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_date"
                android:id="@+id/recycler_delivery_date"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_address"
                android:id="@+id/recycler_delivery_address"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:id="@+id/recycler_delivery_city"
                android:textSize="15sp"/>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recycler_status"
            android:id="@+id/recycler_staus"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/recycler_child_linear_layout"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/recycler_call_imag"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/delivery_info_button"
                android:src="@drawable/ic_002_telephone_handle_silhouette"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_001_waze"
                android:contentDescription="@string/delivery_info_button"
                android:id="@+id/recycler_info_imag"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/no_item_to_show_delivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_item_to_show"
        android:visibility="gone" />


</android.support.v7.widget.CardView>