<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:id="@+id/recycler_product_manager_parent_card_view"
    card_view:cardCornerRadius="5dp"
    android:layout_gravity="top"
    card_view:contentPadding="15dp"
    android:layout_margin="3dp"
    card_view:cardElevation="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/recycler_product_manager_child_linear_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:id="@+id/recycler_product_manager_name_item"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_id"
            android:id="@+id/recycler_product_manager_id_item"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_description"
            android:id="@+id/recycler_product_manager_desc_item"
            android:textSize="15sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/no_item_to_show_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_item_to_show"
        android:visibility="gone" />

</android.support.v7.widget.CardView>