<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:id="@+id/recycler_cust_del"
    card_view:cardCornerRadius="5dp"
    android:layout_gravity="top"
    card_view:contentPadding="15dp"
    android:layout_margin="3dp"
    card_view:cardElevation="5dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/recycler_child_linear_layout"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cust_del_product_name"
                android:id="@+id/recycler_delivery_product_name"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recycler_courier_name"
                android:id="@+id/recycler_courier_name"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recycler_delivery_id"
                android:id="@+id/recycler_delivery_id"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_date"
                android:id="@+id/recycler_delivery_date"
                android:textSize="15sp"/>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recycler_status"
            android:id="@+id/recycler_staus"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:paddingStart="25dp"
            android:paddingEnd="20dp"
            android:paddingTop="25dp"
            android:layout_marginTop="1dp"
            android:layout_toEndOf="@+id/recycler_child_linear_layout"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="5dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/recycler_staus2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toEndOf="@+id/recycler_child_linear_layout"
                android:layout_weight="1"
                android:textSize="20sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="25dp"
                android:text="Set date:"/>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_edit_black_24dp"
                android:contentDescription="@string/delivery_changeD_button"
                android:id="@+id/recycler_setD_img" />
        </LinearLayout>
    </RelativeLayout>



</android.support.v7.widget.CardView>