<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/toolbar_manager"
    android:minHeight="?attr/actionBarSize">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:elevation="20dp"
        android:translationZ="10dp">

    <TextView
        android:id="@+id/ic_toolbar_products"
        android:drawableTop="@drawable/ic_toolbar_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/products"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/ic_toolbar_couriers"
        android:drawableTop="@drawable/ic_toolbar_couriers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/courier"
        android:layout_toStartOf="@+id/ic_toolbar_products"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/ic_toolbar_deliveries"
        android:drawableTop="@drawable/ic_toolbar_deliveries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery"
        android:layout_toStartOf="@+id/ic_toolbar_couriers"/>
    </RelativeLayout>

</android.support.v7.widget.Toolbar>